# maya-hydra

./: CMakeLists.txt  README.md  README_DOC.md  SECURITY.md  build.py  tests-to-run.json
lib/adskHydraSceneBrowser/lib/: CMakeLists.txt
lib/adskHydraSceneBrowser/test/: CMakeLists.txt  adskHydraSceneBrowserTestApi.h  adskHydraSceneBrowserTestFixture.cpp  adskHydraSceneBrowserTestFixture.h  adskHydraSceneBrowserTesting.cpp  adskHydraSceneBrowserTesting.h
lib/flowViewport/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  flowViewport.h.src  fvpInstruments.cpp  fvpInstruments.h  fvpPrimUtils.cpp  fvpPrimUtils.h  fvpUtils.cpp  fvpUtils.h  fvpWireframeColorInterface.h  global.cpp  global.h  tokens.cpp  tokens.h
lib/flowViewport/API/: CMakeLists.txt  fvpDataProducerSceneIndexInterface.h  fvpFilteringSceneIndexClient.h  fvpFilteringSceneIndexClientFwd.h  fvpFilteringSceneIndexInterface.h  fvpFlowSelectionInterface.h  fvpInformationClient.h  fvpInformationInterface.h  fvpSelectionClient.h  fvpSelectionInterface.h  fvpVersionInterface.h  fvpViewportAPITokens.h
lib/flowViewport/API/interfacesImp/: CMakeLists.txt  fvpDataProducerSceneIndexInterfaceImp.cpp  fvpDataProducerSceneIndexInterfaceImp.h  fvpFilteringSceneIndexInterfaceImp.cpp  fvpFilteringSceneIndexInterfaceImp.h  fvpInformationInterfaceImp.cpp  fvpInformationInterfaceImp.h  fvpSelectionInterfaceImp.cpp  fvpSelectionInterfaceImp.h  fvpVersionInterfaceImp.cpp  fvpVersionInterfaceImp.h
lib/flowViewport/API/perViewportSceneIndicesData/: CMakeLists.txt  fvpDataProducerSceneIndexDataAbstractFactory.h  fvpDataProducerSceneIndexDataBase.cpp  fvpDataProducerSceneIndexDataBase.h  fvpFilteringSceneIndexDataAbstractFactory.h  fvpFilteringSceneIndexDataBase.cpp  fvpFilteringSceneIndexDataBase.h  fvpFilteringSceneIndicesChainManager.cpp  fvpFilteringSceneIndicesChainManager.h  fvpViewportAPITokens.cpp  fvpViewportInformationAndSceneIndicesPerViewportData.cpp  fvpViewportInformationAndSceneIndicesPerViewportData.h  fvpViewportInformationAndSceneIndicesPerViewportDataManager.cpp  fvpViewportInformationAndSceneIndicesPerViewportDataManager.h
lib/flowViewport/API/samples/: CMakeLists.txt  fvpDataProducerSceneIndexExample.cpp  fvpDataProducerSceneIndexExample.h  fvpFilteringSceneIndexClientExample.cpp  fvpFilteringSceneIndexClientExample.h  fvpFilteringSceneIndexExample.cpp  fvpFilteringSceneIndexExample.h  fvpInformationClientExample.cpp  fvpInformationClientExample.h  fvpSelectionClientExample.cpp  fvpSelectionClientExample.h
lib/flowViewport/colorPreferences/: CMakeLists.txt  fvpColorChanged.cpp  fvpColorChanged.h  fvpColorPreferences.cpp  fvpColorPreferences.h  fvpColorPreferencesTokens.cpp  fvpColorPreferencesTokens.h  fvpColorPreferencesTranslator.h
lib/flowViewport/sceneIndex/: CMakeLists.txt  fvpBBoxSceneIndex.cpp  fvpBBoxSceneIndex.h  fvpBlockPrimRemovalPropagationSceneIndex.cpp  fvpBlockPrimRemovalPropagationSceneIndex.h  fvpDefaultMaterialSceneIndex.cpp  fvpDefaultMaterialSceneIndex.h  fvpDisplayStyleOverrideSceneIndex.cpp  fvpDisplayStyleOverrideSceneIndex.h  fvpIsolateSelectSceneIndex.cpp  fvpIsolateSelectSceneIndex.h  fvpLightsManagementSceneIndex.cpp  fvpLightsManagementSceneIndex.h  fvpMergingSceneIndex.cpp  fvpMergingSceneIndex.h  fvpParentDataModifierSceneIndex.cpp  fvpParentDataModifierSceneIndex.h  fvpPassThroughSelectionInterfaceSceneIndex.cpp  fvpPassThroughSelectionInterfaceSceneIndex.h  fvpPathInterface.cpp  fvpPathInterface.h  fvpPathInterfaceSceneIndex.cpp  fvpPathInterfaceSceneIndex.h  fvpPruneTexturesSceneIndex.cpp  fvpPruneTexturesSceneIndex.h  fvpPruningSceneIndex.cpp  fvpPruningSceneIndex.h  fvpRenderIndexProxy.cpp  fvpRenderIndexProxy.h  fvpRenderIndexProxyFwd.h  fvpReprSelectorSceneIndex.cpp  fvpReprSelectorSceneIndex.h  fvpSceneIndexUtils.cpp  fvpSceneIndexUtils.h  fvpSelectionInterface.cpp  fvpSelectionInterface.h  fvpSelectionSceneIndex.cpp  fvpSelectionSceneIndex.h  fvpWireframeSelectionHighlightSceneIndex.cpp  fvpWireframeSelectionHighlightSceneIndex.h
lib/flowViewport/selection/: CMakeLists.txt  fvpDataProducersNodeHashCodeToSdfPathRegistry.cpp  fvpDataProducersNodeHashCodeToSdfPathRegistry.h  fvpPathMapper.cpp  fvpPathMapper.h  fvpPathMapperFwd.cpp  fvpPathMapperFwd.h  fvpPathMapperRegistry.cpp  fvpPathMapperRegistry.h  fvpPrefixPathMapper.cpp  fvpPrefixPathMapper.h  fvpSelection.cpp  fvpSelection.h  fvpSelectionFwd.cpp  fvpSelectionFwd.h  fvpSelectionTask.cpp  fvpSelectionTask.h  fvpSelectionTracker.cpp  fvpSelectionTracker.h  fvpSelectionTypes.cpp  fvpSelectionTypes.h
lib/flowViewport/usdPlugins/: CMakeLists.txt
lib/flowViewport/usdPlugins/shadersDiscoveryPlugin/: CMakeLists.txt  README  fvpShadersDiscoveryPlugin.cpp  fvpShadersDiscoveryPlugin.h  plugInfo_Linux.json  plugInfo_OSX.json  plugInfo_Win.json
lib/mayaHydra/flowViewportAPIExamples/flowViewportAPIMayaLocator/: CMakeLists.txt  flowViewportAPIMayaLocator.cpp  (+2 more)
lib/mayaHydra/hydraExtensions/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  hydraUtils.cpp  hydraUtils.h  interface.h  interfaceImp.cpp  mayaHydraLibInterface.h  mayaHydraLibInterfaceImp.cpp  mayaHydraLibInterfaceImp.h  mayaHydraParams.h  mayaHydraSceneProducer.cpp  mayaHydraSceneProducer.h  mayaUtils.cpp  mayaUtils.h  mhBuildInfo.cpp  mhBuildInfo.h.src  mhDataProducersMayaNodeToSdfPathRegistry.cpp  mhDataProducersMayaNodeToSdfPathRegistry.h  mhLeadObjectPathTracker.cpp  mhLeadObjectPathTracker.h  mhWireframeColorInterfaceImp.cpp  mhWireframeColorInterfaceImp.h  mixedUtils.cpp  mixedUtils.h  plugInfo.json  tokens.cpp  tokens.h
plugin/mayaHydraSceneBrowser/: CMakeLists.txt  mayaHydraSceneBrowser.cpp  mayaHydraSceneBrowser.h
plugin/mayaHydraSceneBrowserTest/: CMakeLists.txt  mayaHydraSceneBrowserTestCmd.cpp  mayaHydraSceneBrowserTestCmd.h
scripts/: CMakeLists.txt  mayaHydraMenus.mel  mayaHydra_GeomSubsetsPickMode.mel  mayaHydra_GeomSubsetsPickModeMenu.mel  mayaHydra_registerUIStrings.mel  mayaHydra_registerUI_batch_load.mel  mayaHydra_registerUI_batch_unload.mel  mayaHydra_registerUI_load.mel  mayaHydra_registerUI_unload.mel
test/lib/: CMakeLists.txt
(+403 files in other folders)
